--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,6 @@
     <!-- <p>&copy; {{ site.username }}</p> -->
     <p>Built with Jekyll and <span class="love">❤</span> by <a href="https://github.com/murraco">Mauricio Urraco</a></p>
 </footer>
-<script src="https://raw.githubusercontent.com/VincentGarreau/particles.js/master/particles.js"></script>
+<script src=""></script>
 <script src="{{ '/assets/js/sweet-scroll.min.js' | prepend: site.baseurl }}"></script>
 <script src="{{ '/assets/js/main.js' | prepend: site.baseurl }}"></script>
