--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div id="particles-js">
   <div class="header">
       <h1>
-      	<img src="images/Eu.png" width="300" height="300">
+      	<img src="images/Eu.png" width="354" height="379" style="border-radius: 8px; ">
         <span class="site-title">{{ site.username }}</span>
         <span class="site-description">{{ site.user_title }}</span>
       </h1>
