--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
   <h2>Photo Card</h2>
 
   <div class="w3-card-4" style="width:50%">
-    <img src="Eu.png" alt="Alps" style="width:100%">
+    <img src="images/Eu.png" alt="Alps" style="width:100%">
     <div class="w3-container w3-center">
       <p>The Italian / Austrian Alps</p>
     </div>
