--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,15 +1,110 @@
+<style type="text/css">
+	.column {
+		float: left;
+		width: 33%;
+	}
+
+	.row:after {
+		content: "";
+		display: table;
+		clear: both;
+	}
+</style>
+
 <div class="user-details">
-  <h1>My Expertise</h1>
-  <p>{{ site.user_description }}</p>
+	<h1>Check my last projects!</h1>
+	<p>{{ site.user_description }}</p>
 </div>
 
-<div class="w3-container">
-  <h2>Photo Card</h2>
+<div class="row">
 
-  <div class="w3-card-4" style="width:50%">
-    <img src="images/Eu.png" alt="Alps" style="width:100%">
-    <div class="w3-container w3-center">
-      <p>The Italian / Austrian Alps</p>
-    </div>
-  </div>
+	<div class="column">
+		<div class="w3-container">
+			<h2 style="font-size: 1.136em;"> Computer Network and &nbsp; Systems Security</h2>
+			<div class="w3-card-4">
+				<a href="https://github.com/jffp113/SRSC-2">
+					<img  src="images/LastProjects/SRSC.png" alt="Alps" width="180" height="150" style="border-radius: 15px 15px 15px 15px;"/>
+				</a>
+				<div class="w3-container w3-center">
+					<p>A Secure REST-Based Messaging Repository System with Mutual TLS Client/Server Authentication and Access Control</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="column">
+		<div class="w3-container">
+			<h2 style="font-size: 1.2em;">Confiability of Distributed Systems</h2>
+			<div class="w3-card-4">
+				<a href="https://github.com/rfa-lopes/CSD">
+					<img  src="images/LastProjects/CSD.png" alt="Alps" width="275" height="150" style="border-radius: 15px 15px 15px 15px;"/>
+				</a>
+				<div class="w3-container w3-center">
+					<p>Homomorphic Encryption with Bizantine Fault Tolerance</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="column">
+		<div class="w3-container">
+			<h2 style="font-size: 1.136em;"> Computer Networks Architecture and Protocols</h2>
+			<div class="w3-card-4">
+				<a href="https://github.com/rfa-lopes/APRC">
+					<img  src="images/LastProjects/APRC.png" alt="Alps" width="250" height="150" style="border-radius: 15px 15px 15px 15px;"/>
+				</a>
+				<div class="w3-container w3-center">
+					<p>Passive Network Measurements and Analysis of NetFlow data</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+</div>
+
+<div class="row">
+
+
+	<div class="column">
+		<div class="w3-container">
+			<h2 style="font-size: 1.5em;">Software Security</h2>
+			<div class="w3-card-4">
+				<a href="https://github.com/rfa-lopes/SS-TP1">
+					<img  src="images/LastProjects/SS1.png" alt="Alps" width="170" height="150" style="border-radius: 15px 15px 15px 15px;"/>
+				</a>
+				<div class="w3-container w3-center">
+					<p>Cookie-Based Authentication</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="column">
+		<div class="w3-container">
+			<h2 style="font-size: 1.5em;">Software Security</h2>
+			<div class="w3-card-4">
+				<a href="https://github.com/rfa-lopes/SoftwareSecurity">
+					<img  src="images/LastProjects/SS2.png" alt="Alps" width="275" height="150" style="border-radius: 15px 15px 15px 15px;"/>
+				</a>
+				<div class="w3-container w3-center">
+					<p>Exploit for Buffer Overflow vulnerability</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="column">
+		<div class="w3-container">
+			<h2 style="font-size: 1.5em;">Software Engineering</h2>
+			<div class="w3-card-4">
+				<a href="https://github.com/rfa-lopes/SoftwareEngineering">
+					<img  src="images/LastProjects/ES.png" alt="Alps" width="275" height="150" style="border-radius: 15px 15px 15px 15px;"/>
+				</a>
+				<div class="w3-container w3-center">
+					<p>Instagram Plus - Prototype</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
 </div>
