--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,5 @@
 <footer class="footer">
-    <!-- <p>&copy; {{ site.username }}</p> -->
-    <p>Built with Jekyll and <span class="love">❤</span> by <a href="https://github.com/murraco">Mauricio Urraco</a></p>
+	<p>&copy; {{ site.username }} - Last update in 20/07/2020</p>
 </footer>
 <script src=""></script>
 <script src="{{ '/assets/js/sweet-scroll.min.js' | prepend: site.baseurl }}"></script>
