--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,7 +13,7 @@
 
 <div class="user-details">
 	<h1>Check my last projects!</h1>
-	<p>{{ site.user_description }}</p>
+	<!-- <p>{{ site.user_description }}</p> -->
 </div>
 
 <div class="row">
