--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
 <head>
+  <script data-ad-client="ca-pub-5353808927577681" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <div id="particles-js">
     <div class="header">
       <h1>
