--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,7 @@
 
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}">
   <link rel="shortcut icon" type="image/png" href="{{ '/assets/favicon.png' }}" >
+
+  {% if site.google_ad_client %}{% include google_analytics.html %}{% endif %} 
+
 </head>
