--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,13 +20,31 @@
 
 	<div class="column">
 		<div class="w3-container">
+			<h2 style="font-size: 1.136em;"> HOCKEFY</h2>
+			<div class="w3-card-4">
+				<a href="https://hockey-fy.com/">
+					<img src="images/LastProjects/HOCKEYFY.png" alt="Alps" width="180" height="150"
+						style="border-radius: 15px 15px 15px 15px;" />
+				</a>
+				<div class="w3-container w3-center">
+					<p>Founder of the most advanced 3D configurator for customizing roller hockey boots and gear, allowing
+						users to change colors and textures, add text and stickers, and much more!</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="column">
+		<div class="w3-container">
 			<h2 style="font-size: 1.136em;"> Computer Network and &nbsp; Systems Security</h2>
 			<div class="w3-card-4">
 				<a href="https://github.com/jffp113/SRSC-2">
-					<img  src="images/LastProjects/SRSC.png" alt="Alps" width="180" height="150" style="border-radius: 15px 15px 15px 15px;"/>
+					<img src="images/LastProjects/SRSC.png" alt="Alps" width="180" height="150"
+						style="border-radius: 15px 15px 15px 15px;" />
 				</a>
 				<div class="w3-container w3-center">
-					<p>A Secure REST-Based Messaging Repository System with Mutual TLS Client/Server Authentication and Access Control</p>
+					<p>A Secure REST-Based Messaging Repository System with Mutual TLS Client/Server Authentication and
+						Access Control</p>
 				</div>
 			</div>
 		</div>
@@ -37,7 +55,8 @@
 			<h2 style="font-size: 1.2em;">Confiability of Distributed Systems</h2>
 			<div class="w3-card-4">
 				<a href="https://github.com/rfa-lopes/CSD">
-					<img  src="images/LastProjects/CSD.png" alt="Alps" width="275" height="150" style="border-radius: 15px 15px 15px 15px;"/>
+					<img src="images/LastProjects/CSD.png" alt="Alps" width="275" height="150"
+						style="border-radius: 15px 15px 15px 15px;" />
 				</a>
 				<div class="w3-container w3-center">
 					<p>Homomorphic Encryption with Bizantine Fault Tolerance</p>
@@ -51,7 +70,8 @@
 			<h2 style="font-size: 1.136em;"> Computer Networks Architecture and Protocols</h2>
 			<div class="w3-card-4">
 				<a href="https://github.com/rfa-lopes/APRC">
-					<img  src="images/LastProjects/APRC.png" alt="Alps" width="250" height="150" style="border-radius: 15px 15px 15px 15px;"/>
+					<img src="images/LastProjects/APRC.png" alt="Alps" width="250" height="150"
+						style="border-radius: 15px 15px 15px 15px;" />
 				</a>
 				<div class="w3-container w3-center">
 					<p>Passive Network Measurements and Analysis of NetFlow data</p>
@@ -70,7 +90,8 @@
 			<h2 style="font-size: 1.5em;">Software Security</h2>
 			<div class="w3-card-4">
 				<a href="https://github.com/rfa-lopes/SS-TP1">
-					<img  src="images/LastProjects/SS1.png" alt="Alps" width="170" height="150" style="border-radius: 15px 15px 15px 15px;"/>
+					<img src="images/LastProjects/SS1.png" alt="Alps" width="170" height="150"
+						style="border-radius: 15px 15px 15px 15px;" />
 				</a>
 				<div class="w3-container w3-center">
 					<p>Cookie-Based Authentication</p>
@@ -84,7 +105,8 @@
 			<h2 style="font-size: 1.5em;">Software Security</h2>
 			<div class="w3-card-4">
 				<a href="https://github.com/rfa-lopes/SoftwareSecurity">
-					<img  src="images/LastProjects/SS2.png" alt="Alps" width="275" height="150" style="border-radius: 15px 15px 15px 15px;"/>
+					<img src="images/LastProjects/SS2.png" alt="Alps" width="275" height="150"
+						style="border-radius: 15px 15px 15px 15px;" />
 				</a>
 				<div class="w3-container w3-center">
 					<p>Exploit for Buffer Overflow vulnerability</p>
@@ -98,7 +120,8 @@
 			<h2 style="font-size: 1.5em;">Software Engineering</h2>
 			<div class="w3-card-4">
 				<a href="https://github.com/rfa-lopes/SoftwareEngineering">
-					<img  src="images/LastProjects/ES.png" alt="Alps" width="275" height="150" style="border-radius: 15px 15px 15px 15px;"/>
+					<img src="images/LastProjects/ES.png" alt="Alps" width="275" height="150"
+						style="border-radius: 15px 15px 15px 15px;" />
 				</a>
 				<div class="w3-container w3-center">
 					<p>Instagram Plus - Prototype</p>
