--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,14 +7,14 @@
     </h1>
     <div class="header-icons">
       <a aria-label="Send email" href="mailto:rfa.lopess@gmail.com"><i class="icon fa fa-envelope"></i></a>
-      <a aria-label="My Instagram" target="_blank" href="https://www.instagram.com/{{site.instagram_username}}"><i
+      <a aria-label="My Instagram" target="_blank" href="https://www.instagram.com/{{site.user.instagram}}"><i
           class="icon fa fa-instagram" aria-hidden="true"></i></a>
-      <a aria-label="My Facebook" target="_blank" href="https://www.facebook.com/rfalopes7"><i
+      <a aria-label="My Facebook" target="_blank" href="https://www.facebook.com/{{site.user.facebook}}"><i
           class="icon fa fa-facebook" aria-hidden="true"></i></a>
-      <a aria-label="My LinkedIn" target="_blank" href="https://www.linkedin.com/in/rfa-lopes/"><i
+      <a aria-label="My LinkedIn" target="_blank" href="https://www.linkedin.com/in/{{site.user.linkedin}}/"><i
           class="icon fa fa-linkedin-square" aria-hidden="true"></i></a>
-      <a aria-label="My Github" target="_blank" href="https://github.com/rfa-lopes"><i class="icon fa fa-github-alt"
-          aria-hidden="true"></i></a>
+      <a aria-label="My Github" target="_blank" href="https://github.com/{{site.user.github}}"><i
+          class="icon fa fa-github-alt" aria-hidden="true"></i></a>
     </div>
     <div class="header-links">
       <!-- <a class="link" href="#about" data-scroll>About Me</a> -->
