--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,12 @@
   <div class="header">
     <h1>
       <img src="images/Eu.png" width="300" height="300" style="border-radius: 8px; ">
-      <span class="site-title">{{ site.username }}</span>
-      <span class="site-description">{{ site.user_title }}</span>
+      <span class="site-username">{{ site.username }}</span>
+      <span class="site-title">{{ site.user_title }}</span>
     </h1>
+    <h3>
+      <span class="site-description">{{ site.user_description }}</span>
+    </h3>
     <div class="header-icons">
       <a aria-label="Send email" href="mailto:rfa.lopess@gmail.com"><i class="icon fa fa-envelope"></i></a>
       <a aria-label="My Instagram" target="_blank" href="https://www.instagram.com/{{site.user.instagram}}"><i
