--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
   <div class="header">
     <h1>
       <img src="images/Eu.png" width="300" height="300" style="border-radius: 8px; ">
-      <span class="site-username">{{ site.username }}</span>
-      <span class="site-title">{{ site.user_title }}</span>
+      <span class="site-title">{{ site.username }}</span>
+      <span class="site-description">{{ site.user_title }}</span>
     </h1>
     <h3>
       <span class="site-description">{{ site.user_description }}</span>
