--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,9 +5,7 @@
       <span class="site-title">{{ site.username }}</span>
       <span class="site-description">{{ site.user_title }}</span>
     </h1>
-    <h3>
-      <span class="site-description">{{ site.user_description }}</span>
-    </h3>
+    <h3 class="site-description">{{ site.user_description }}</h3>
     <div class="header-icons">
       <a aria-label="Send email" href="mailto:rfa.lopess@gmail.com"><i class="icon fa fa-envelope"></i></a>
       <a aria-label="My Instagram" target="_blank" href="https://www.instagram.com/{{site.user.instagram}}"><i
