--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,16 +5,15 @@
       <span class="site-title">{{ site.username }}</span>
       <span class="site-description">{{ site.user_title }}</span>
     </h1>
-    <h3 class="site-description">{{ site.user_description }}</h3>
     <div class="header-icons">
       <a aria-label="Send email" href="mailto:rfa.lopess@gmail.com"><i class="icon fa fa-envelope"></i></a>
-      <a aria-label="My Instagram" target="_blank" href="https://www.instagram.com/{{site.user.instagram}}"><i
+      <a aria-label="My Instagram" target="_blank" href="https://www.instagram.com/{{site.user_instagram}}"><i
           class="icon fa fa-instagram" aria-hidden="true"></i></a>
-      <a aria-label="My Facebook" target="_blank" href="https://www.facebook.com/{{site.user.facebook}}"><i
+      <a aria-label="My Facebook" target="_blank" href="https://www.facebook.com/{{site.user_facebook}}"><i
           class="icon fa fa-facebook" aria-hidden="true"></i></a>
-      <a aria-label="My LinkedIn" target="_blank" href="https://www.linkedin.com/in/{{site.user.linkedin}}/"><i
+      <a aria-label="My LinkedIn" target="_blank" href="https://www.linkedin.com/in/{{site.user_linkedin}}/"><i
           class="icon fa fa-linkedin-square" aria-hidden="true"></i></a>
-      <a aria-label="My Github" target="_blank" href="https://github.com/{{site.user.github}}"><i
+      <a aria-label="My Github" target="_blank" href="https://github.com/{{site.user_github}}"><i
           class="icon fa fa-github-alt" aria-hidden="true"></i></a>
     </div>
     <div class="header-links">
